# FEUP-SO

./: README.md
fichas/f0/dir1/dir3/: trees.txt
fichas/f1/: a.out  char_array  char_array.c  char_array.s  ex8.c  good_pointer.c  pointers1.c  trace.c
fichas/f2/: a.out  complex.c  list.c  list.h  matrix.c  matrix.h  use_complex.c  use_matrix.c  use_vector.c  vector.c
fichas/f3/: a.out  chcase.c  ex1.c  ex1a.c  ex1b.c  ex1c.c  ex5.c  file1  file1.txt  file2.txt  mycat.c  mygrep.c  mywc.c  naughty.c
fichas/f4/: mycat.c  mychmod.c  mygetcwd.c  mylstat.c  mytouch.c  teste.txt  teste2.txt
project/: CMakeLists.txt  addmx.c  cypher.c  phrases.c
